<resources>
    <string name="app_name">AH-Rental</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="welcome_home">Welcome to Afg home Real state</string>
    <string name="buy">BUY</string>
    <string name="rent">RENT</string>
    <string name="pledge">PLEDGE</string>
    <string name="all">All</string>
    <string name="apartment">Apartment</string>
    <string name="shop">Shop</string>
    <string name="student">Student</string>
    <string name="choose_proparty">Choose Property</string>
    <string name="any_location">Any location</string>
    <string name="close_to_me">Close to me</string>
    <string name="location_name">Location name</string>
    <string name="set_location">Set location</string>
    <string name="bed_room">Bed room</string>
    <string name="any">Any</string>
    <string name="plus_1">1+</string>
    <string name="plus_2">2+</string>
    <string name="plus_3">3+</string>
    <string name="plus_4">4+</string>
    <string name="plus_5">5+</string>
    <string name="message_search_specific">Another specification of property searched automatically</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="ads">Ads</string>
    <string name="for_rent">For</string>
    <string name="next">Next</string>
    <string name="rooms">Rooms</string>
    <string name="toilets">Toilets</string>
    <string name="bathroom">Bathrooms</string>
    <string name="more_tage">More Tag</string>
    <string name="current_gps">Current GPS</string>
    <string name="google_map">Google MAP</string>
    <string name="address">Address</string>
    <string name="district">District</string>
    <string name="description">Description</string>
    <string name="finish">Finish</string>
    <string name="add_image">Add Image</string>
    <string name="create_new_account">Create new account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="google">google</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Home Page</string>
    <string name="hello_blank_fragment_home">Home Page</string>
    <string name="hello_blank_fragment_home_notification">Notifications</string>
    <string name="txt_select_type">Select Type</string>
    <string name="txt_share_for">For</string>
    <string name="txt_share_price">Price</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="title_activity_maps_search">Map</string>
</resources>
