<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:gravity="center"
    tools:context=".share_proparty_fragments.Third_step_share_prop_frag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/txt_share_room"
            android:layout_marginTop="10dp"
            android:hint="@string/rooms"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/txt_share_toilets"
            android:layout_marginTop="10dp"
            android:hint="@string/toilets"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/txt_share_bathroom"
            android:layout_marginTop="10dp"
            android:hint="@string/bathroom"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/txt_share_moretage"
            android:layout_marginTop="10dp"
            android:hint="@string/more_tage"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_share_next_third"
            android:background="@drawable/button_style"
            android:layout_marginTop="20dp"
            android:text="@string/next"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textAllCaps="false"/>
    </LinearLayout>

</RelativeLayout>