<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:context=".share_proparty_fragments.First_step_share_prop_frag">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/txt_share_select_type"
        android:layout_marginTop="60dp"
        android:hint="@string/txt_select_type"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/txt_share_for"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txt_share_select_type"
        android:hint="@string/txt_share_for"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/txt_share_price"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txt_share_for"
        android:hint="@string/txt_share_price"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_share_next_one"
        android:layout_below="@+id/txt_share_price"
        android:background="@drawable/button_style"
        android:layout_marginTop="20dp"
        android:text="Next"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

</RelativeLayout>