<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        android:gravity="center"
        android:layout_gravity="center"

        tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_gmail_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:background="@drawable/button_circle_blue"
            />

        <Button
            android:id="@+id/btn_facebook_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_circle_red"
            android:layout_marginTop="5dp"
            android:text="@string/google" />

    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_username"
        android:textColor="@color/white"
        android:layout_below="@+id/btn_facebook_auth"
        android:hint="Enter Username"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_password"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txt_username"
        android:hint="Enter Password"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txt_password"
        android:id="@+id/btn_auth_user"
        android:background="@drawable/button_style"
        android:text="Login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textSize="15dp"
        android:layout_marginTop="20dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="15dp"
        android:layout_marginTop="20dp"

        />






</LinearLayout>